@@ -1,4 +1,7 @@
 Version 0.0.2 (not yet released):
+- CVL: cvl_color_from_string()
+  cvtool: All commands that accept color names as options
+  Replace rrr,ggg,bbb format with <val>g<val>b<val>.
 - CVL: Add interface to the CAIRO graphics library.
 - CVL: Always use 32bit for pixels.
 - CVL: Replaced cvl_vector*_t types with simple pointers.
